    that feature was broken (and nobody complained)
  * INSTALL: when installing using the url method, do keep the downloaded file;
    it will be found in "~/.wajig/$HOSTNAME/"
  * remove the (Suggests) dependencies on fping and wget; Python stdlib is
    capable enough
  * Restoring some of the UI I broke in version 2.3 Closes: #667856

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 08 Apr 2012 23:12:03 +0200

wajig (2.4.1) unstable; urgency=low

  * 2.4 made an assumption that a user that isn't in 'sudo' group
    is not a sudoer. That's not the case (and it's a bad assumption).

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 27 Mar 2012 16:07:31 +0200

wajig (2.4) unstable; urgency=low

  * README, TODO, NEWS: if doc path (/usr/share/doc/<package name>) for
    a given package isn't found, check if such a package even exists.
  * INSTALL, INSTALLSUGGESTED: make --recommends and --norecommends options
    conflict.
  * INSTALL: one can now specify a mixture of installables:
    * deb files
    * url files
    * normal packages
    Previously, only one of these types could be installed at a time
  * make bash completer also complete lower-case COMMANDS;
    patch by "Reuben Thomas" <rrt@sc3d.org>
  * Reinstate --simulate and --teaching options:
    - the --simulate option implies that the epilogs of the --help option
      are now redundant so they are now removed. All they did was state what
      commands would be ran.
    - the --teaching option is renamed to --teach (for sake of consistency)
    - Closes: #665729
  * LOCALUPGRADE remove:
    - [ole] wajig LOCALUPGRADE
    - [new] wajig UPGRADE --local 
  * LOCALDISTUPGRADE remove:
    - [ole] wajig LOCALDISTUPGRADE
    - [new] wajig DISTUPGRADE --local
  * Fix an (embarassing) exception; Closes: #665887

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 27 Mar 2012 12:51:44 +0200

wajig (2.3) unstable; urgency=low

  NEW
  * TODO: new command that reads package TODO files

  UI CHANGES